# order-book

./: .gitignore  Cargo.toml  Dockerfile.tpl  README.md  business.rs
.sqlx/: query-014cc1d02757b12cd72f7011db759a9112af337179ba92e47336a59490ec1b6f.json  query-056ab352c0d8706a394293ff2b78ddc724b16cdd23fbc35f15b7a64b79b3e903.json  query-05916f1fcee30bef442982430ba0c4af5ff2f3caf5f6ef0c7461bd658cd8c7f5.json  query-0b4012e95bd313bf1c168b2d4caacff7a466b1e677e573678768552b38746c3a.json  query-12bfa589d7d3ee848f3e33afb26f01c12c48954f39fd0d037d282fcaea3ab576.json  query-1e9561d386988ef27c7209d43cf8d31f487650c6f7b8124e4df6af69b10920e2.json  query-1f047ad4678751d2907eea7da7c09ac9b32cd4bec3ebefce79686c4132c0ac0e.json  query-36dc81f736982d48c2456f3908e3630596b72b37efe856ef6041f3bbe235dcba.json  query-370d0ddc3a8bf349adea3ff10f3f05cd08f309de68e09d6fd85498877d715c1f.json  query-3a146537523d6435217751fd1ac8fc2f10d9ee8bc9ab53a80464a259cfba777a.json  query-53ffdccaf1eaaaa3a3a5523c479a7b0d8f38d7f30f91483426856041c5f89f36.json  query-5e15f23fcb2a0a8711d5da1ce1223530a785b26b617982def3f32784da45c798.json  query-6d70f963ec614f1cbb214c26e3996c202e92b9a1f71e479f4e01f1dd57808fe3.json  (+14 more)
api/: Cargo.toml
api/src/: apierror.rs  ask.rs  bid.rs  candidate.rs  deal.rs  main.rs  order_match.rs  stats.rs  user.rs
business/: Cargo.toml
business/migrations/: 20260123123712_init.sql
business/src/: ask.rs  bid.rs  businesserror.rs  candidate.rs  deal.rs  lib.rs  stats.rs  user.rs
business/tests/: candidate.rs
business/tests/features/: ask.feature  bid.feature  match_making.feature
business/tests/fixtures/: one_candidate.sql
business/tests/market/: ask_spec.rs  bid_spec.rs  main.rs  market_world.rs  match_making.rs
fakeclient/: Cargo.toml
fakeclient/src/: agent.rs  main.rs
infra/: root.hcl
matchmaker/: Cargo.toml
matchmaker/cucumber.tests/market/: bid_spec.rs  cucumber_error.rs  main.rs  market_world.rs  match_making.rs
matchmaker/migrations/: 20260123123712_init.sql
matchmaker/src/: candidate.rs  candidate_repository.rs  candidate_repository_impl.rs  deal.rs  deal_repository.rs  deal_repository_impl.rs  lib.rs  market_repository_impl.rs  repo_impl.rs  repository.rs  tests.rs
matchmaker/tests/: market.rs  matchmaker.rs
matchmaker/tests/fixtures/: first_user.sql
model/: Cargo.toml
model/src/: ask.rs  bid.rs  lib.rs  lock_mode.rs  match_maker.rs  order.rs  order_match.rs  repository.rs  repository_error.rs  user.rs
model/src/deal/: mod.rs  repository.rs
model/src/market/: mod.rs  repository.rs  tests.rs
model/src/match_service/: mod.rs
model/src/match_service/tests/: mod.rs  repository_mock.rs
model/src/order/: ask.rs  bid.rs  candidate.rs  candidate_repository.rs  match_service.rs  mod.rs  order.rs  repository.rs
model/src/stats/: repository.rs
model/src/user/: factory.rs  repository.rs  user.rs
model/tests/features/: ask.feature  match_making.feature
model/tests/market/: bid_spec.rs  main.rs  market_world.rs  spec.rs
order/: Cargo.toml
order/src/: ask.rs  bid.rs  lib.rs  order.rs  repository.rs  repository_impl.rs  score.rs
repositories/: Cargo.toml
repositories/.sqlx/: query-063d880b4546abaeda6dcd9ef559696c8236d83dccca49d5e5b3b5d4cc967f18.json  query-1c34716ea770bbfc4a99f42d974f1815380fed8471562029821e6a41e867a681.json  query-21c20dfd8298da3398a656ccace9c81c6cb75898814261d738df2109da1d4e21.json  query-26e99730f4e34c5b26e865ba237420c53e7a5573bdc6ea91e3e1e7c0a5e2e598.json  query-2dac83c6255f33e89478e7f23faf68b7f1e09399f069f047b473333cb6608036.json  query-2dce40c846eb91334614ac4684cf6586f0fe888b352b0a63ad999c6d471fb764.json  query-30827a32669326e3ea7696b0eab25da450ef0c88f3626136a76aee157b370125.json  query-35190a39c1137878079dda5b7ee1c2cecdbf3f1aeae14e1b973791414420d2c3.json  query-37c8592a893c5878b321465eccd7a051d676ef3fabb1e6d3314cfa9a1d75ce4a.json  query-3b0b6d0d2b1eace7c7d4eca65299cf773757e4507265fb80d42a9269aa7e59bf.json  query-41364f39382a61ba1e13fc635fa74bacfe5375cd797629bb6e6b2b59e6f1f3bd.json  query-4692552bc737b0c947274499ae8baf1823a8aac81bb92916a3b88f5b61253131.json  query-4a702a9f51c306a685d0fb7a59c0194e561a52eb5370efeef477606ccfbee75a.json  query-55d019e87c32f428b3c63d5fd95a9b42f6b6d69254f8113f7b027697c550b3b9.json  query-639ef76925eeb6fe29525cfcd81e34f63529540146293c51c1f3c74841f0b0e3.json  query-70162e62f7d5687ea80b1f943108afee1da01070689254a080d166829a60bb87.json  query-72c8ebffa715e5ff0dda8a69baf3f3cd38870796180f3c8735d1c22e1afac428.json  query-84df152c5345725d4167cefe62db8e91a283fad6206437eac60b5bcdb51da651.json  query-8ab12ea621ccebe8a912aa02a17036b793071b6b133be661adf87a05739924a1.json  query-a4b041828592616bf52b0ac0600d72eb0fda82d28d09e0a4dff2a8448ca6e755.json  query-b86405ebc3228fd8a78456a989c8ebc8331e206d38047f66945322f42396219f.json  query-d2bb249249aa8bc74467b9352b207dffb962152ead9158eebeb09a2f72769887.json  query-d3d64cf58621d29bb275f57a234c9691d80cf025a50702657b74c91e7be564cc.json  query-dbe266d237ab98a34d9e5d252322d7a8a9d282f27651e51499d97d2dfec45b35.json  query-e1ff84d8efda5d450976b5eee3a445f484b0e53c1ad22d76e655082bb8904e21.json  query-e57d1e9594720ab6ef4971ffdeb5ad5b70e83db37891b995a999100fbad18c87.json  query-e5e0ee75ed04a2c7aeb2fc1c7f9761134e050e204a8e9cc1de5e4535b7f55e44.json
repositories/migrations/: 20251219123712_init.sql
repositories/src/: ask.rs  bid.rs  candidate.rs  deal.rs  lib.rs  lock_mode.rs  market.rs  order.rs  order_match.rs  repository.rs  stats.rs  user.rs
repositories/tests/: main.rs  markets.sql  user.rs
repositories/tests/fixtures/: asks.sql  first_user.sql
specs/: Cargo.toml
specs/features/: user_lifecycle.feature
specs/src/: main.rs
specs/src/market/: ask_spec.rs  bid_spec.rs  market_world.rs  match_making.rs  mod.rs
user/: Cargo.toml
user/sql_tests/: candidate.rs
user/sql_tests/fixtures/: one_archived_candidate.sql  one_candidate.sql  three_asks_two_bids.sql
user/src/: api_handlers.rs  apierror.rs  business.rs  deal.rs  deal_repository_impl.rs  lib.rs  main.rs  repo_impl.rs  repository.rs  repository_error.rs  user.rs
user/tests/: user.rs
user/tests/fixtures/: asks.sql  bids.sql
(+42 files in other folders)
