[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
appconfig = { version = "0.1.0", path = "../appconfig" }
axum = { version = "0.8.7", features = ["macros"] }
model = { version = "0.1.0", path = "../model" }
repositories = { version = "0.1.0", path = "../repositories" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6"}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.43", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.22", features = ["serde", "json", "local-time", "fmt", "env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
