[package]
name = "business"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
error-stack = { version = "0.6.0", features = ["tracing"] }
model = { version = "0.1.0", path = "../model" }
repositories = { version = "0.1.0", path = "../repositories" }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = "0.8.6"
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["serde", "v7"] }
