[package]
name = "business"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cucumber = { version = "0.22.1", features = ["output-json", "tracing"] }
error-stack = { version = "0.6.0", features = ["tracing"] }
model = { version = "0.1.0", path = "../model" }
repositories = { version = "0.1.0", path = "../repositories" }
retry = "2.1.0"
rust_decimal = "1.39.0"
rusty-money = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = "0.8.6"
testcontainers-modules = { version = "0.14.0", features = ["blocking", "postgres"] }
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["serde", "v7"] }

[[test]]
name = "market"
harness = false
