[package]
name = "fakeclient"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rand = { version = "0.9.2", features = ["serde"] }
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
