[package]
name = "fakeclient"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
error-stack = { version = "0.6.0", features = ["tracing"] }
rand = { version = "0.9.2", features = ["serde"] }
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["json"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
