[package]
name = "repositories"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { version = "0.1.0", path = "../model" }
sqlx = { version = "0.8.6", features = ["bigdecimal", "macros", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4"] }
