[package]
name = "repositories"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { version = "0.1.0", path = "../model" }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["bigdecimal", "macros", "postgres", "runtime-tokio", "uuid"] }
testcontainers-modules = { version = "0.14.0", features = ["blocking", "postgres"] }
thiserror = "2.0.17"
tracing = "0.1.43"
uuid = { version = "1.19.0", features = ["v7"] }
