[package]
name = "repositories"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
model = { version = "0.1.0", path = "../model" }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["bigdecimal", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v7"] }
