[package]
name = "specs"
version = "0.1.0"
edition = "2024"

[dependencies]
cucumber = { version = "0.22.1", features = ["tracing"] }
error-stack = "0.6.0"
matchmaker = { version = "0.1.0", path = "../matchmaker" }
rust_decimal = "1.40.0"
rusty-money = "0.5.0"
sqlx = { version = "0.8.6", features = ["migrate", "postgres"] }
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
user = { version = "0.1.0", path = "../user" }
uuid = { version = "1.19.0", features = ["v7"] }

# [[test]]
# name = "market"
# harness = false
