[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
appconfig = { version = "0.1.0", path = "../appconfig" }
axum = { version = "0.8.7", features = ["macros"] }
error-stack = "0.6.0"
matchmaker = { version = "0.1.0", path = "../matchmaker" }
model = { version = "0.1.0", path = "../model" }
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
repositories = { version = "0.1.0", path = "../repositories" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6"}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.43", features = ["async-await", "log"] }
tracing-error = "0.2.1"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.22", features = ["serde", "json", "local-time", "fmt", "env-filter", "ansi", "registry"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
